# api/Models/Invite.cs
@@ -1,0 +1,60 @@
+// Copyright (c) Microsoft Corporation. All rights reserved.
+// Licensed under the MIT License.
+
+// <auto-generated/>
+
+#nullable disable
+
+using System;
+
+namespace SiteOfRefuge.API.Models
+{
+    /// <summary> An invitation to connect. </summary>
+    public partial class Invite
+    {
+        /// <summary> Initializes a new instance of Invite. </summary>
+        /// <param name="refugeeId"> Unique identifier in UUID/GUID format. </param>
+        /// <param name="hostId"> Unique identifier in UUID/GUID format. </param>
+        /// <exception cref="ArgumentNullException"> <paramref name="refugeeId"/> or <paramref name="hostId"/> is null. </exception>
+        internal Invite(string refugeeId, string hostId)
+        {
+            if (refugeeId == null)
+            {
+                throw new ArgumentNullException(nameof(refugeeId));
+            }
+            if (hostId == null)
+            {
+                throw new ArgumentNullException(nameof(hostId));
+            }
+
+            RefugeeId = refugeeId;
+            HostId = hostId;
+        }
+
+        /// <summary> Initializes a new instance of Invite. </summary>
+        /// <param name="id"> Unique identifier in UUID/GUID format. </param>
+        /// <param name="refugeeId"> Unique identifier in UUID/GUID format. </param>
+        /// <param name="hostId"> Unique identifier in UUID/GUID format. </param>
+        /// <param name="dateRequested"> Date when inivitation was sent. </param>
+        /// <param name="dateAccepted"> Date when inivitation was accepted. </param>
+        internal Invite(string id, string refugeeId, string hostId, DateTimeOffset? dateRequested, DateTimeOffset? dateAccepted)
+        {
+            Id = id;
+            RefugeeId = refugeeId;
+            HostId = hostId;
+            DateRequested = dateRequested;
+            DateAccepted = dateAccepted;
+        }
+
+        /// <summary> Unique identifier in UUID/GUID format. </summary>
+        public string Id { get; }
+        /// <summary> Unique identifier in UUID/GUID format. </summary>
+        public string RefugeeId { get; }
+        /// <summary> Unique identifier in UUID/GUID format. </summary>
+        public string HostId { get; }
+        /// <summary> Date when inivitation was sent. </summary>
+        public DateTimeOffset? DateRequested { get; }
+        /// <summary> Date when inivitation was accepted. </summary>
+        public DateTimeOffset? DateAccepted { get; }
+    }
+}
